# vision-mcp

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  install.sh  pyproject.toml
deploy/: env.sh.example  install.sh  launcher.py  nginx.conf  supervisord.conf  uninstall.sh
proxy/: test_vision_proxy.py  vision_proxy.py
tests/: conftest.py  test_auth.py  test_config.py  test_image.py  test_no_disk_leak.py  test_no_log_leak.py  test_server.py  test_tools.py  test_upstream.py
vision_mcp/: __init__.py  auth.py  config.py  image.py  server.py  tools.py  upstream.py
