[project]
name = "vision-mcp"
version = "0.1.0"
description = "Remote MCP server with vision tools backed by Doubao Seed 2.0 Mini"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0",
    "openai>=1.50",
    "uvicorn[standard]>=0.30",
    "starlette>=0.40",
    "pillow>=10.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vision_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]