[project]
name = "vision-mcp"
version = "0.3.0"
description = "Pure-stdlib stdio/HTTP MCP proxy exposing three vision tools on Doubao Seed 2.0 Mini."
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["proxy"]
